# pfe

./: .gitignore  pyproject.toml
data/parsed/: img.md  lettre.md  recu.md
src/: main.py
src/ocr_parsing/: benchmark_docling.py  docling_easy.py  docling_rapid.py  docling_test.py  docling_tres.py  pa.py
src/storage/: bucket_create.py  ceph_download.py  ceph_listFiles.py  ceph_send.py
src/storage/config/: config.py
