[project]
name = "pfe"
version = "0.1.0"
description = "pfe project"
authors = [
    {name = "skander jaouadi"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.42.45,<2.0.0)",
    "docling[vlm] (>=2.73.1,<3.0.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "onnxruntime (>=1.24.1,<2.0.0)",
    "easyocr (>=1.6.2,<2.0.0)",
    "rapidocr-onnxruntime (>=1.1.0,<2.0.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
